# todlist

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
model/: model.hpp
view/: edit_dialog.hpp  main_window.hpp  opacity_slider.hpp  todo_item.hpp  todo_list.hpp
